# dashj-merk-android

./: README.md  build.gradle  local.properties  settings.gradle
.github/workflows/: clippy.yml  tests.yml
dashj-merk/: android_build.sh  build.gradle
dashj-merk/src/androidTest/java/org/dashj/merk/android/: ExampleInstrumentedTest.kt
dashj-merk/src/main/: AndroidManifest.xml
dashj-merk/src/main/rust/: Cargo.toml
dashj-merk/src/main/rust/src/: lib.rs
dashj-merk/src/test/java/org/dashj/merk/android/: ExampleUnitTest.kt
