[package]
name = "dashj-merk"
version = "0.18.0"
authors = ["HashEngineering <hashengineeringsolutions@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merk = { git = "https://github.com/dashevo/merk", branch = "close-and-destroy" }
#merk = { git = "https://github.com/nomic-io/merk", branch = "develop" }
#merk = "2.0.1"
jni = { version = "0.5"}#, default-features = false }
hex = { version = "0.3.0" }

[lib]
#name = "dashj-merk"
crate-type = ["dylib"]
