[package]
name = "dashj_merk"
version = "0.22.0"
authors = ["HashEngineering <hashengineeringsolutions@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.5"}#, default-features = false }
hex = { version = "0.3.0" }

[dependencies.merk]
git = "https://github.com/dashevo/merk.git"
branch = "v0.1-dev-stable"
features = ["verify"]
default-features = false

[lib]
crate-type = ["cdylib"]
